# clap

./: Cargo.toml  README.md
clap_derive/: Cargo.toml  README.md
clap_derive/src/: attrs.rs
clap_derive/src/derives/: from_arg_matches.rs  into_app.rs
clap_derive/tests/: auto.rs  custom-string-parsers.rs
clap_generate/: Cargo.toml
clap_generate/tests/: generate_completions.rs  value_hints.rs
clap_up/: Cargo.toml
src/: derive.rs  lib.rs
src/parse/matches/: arg_matches.rs
tests/: app_from_crate.rs  app_settings.rs  arg_aliases.rs  arg_aliases_short.rs  borrowed.rs  cargo.rs  conflicts.rs  default_missing_vals.rs  default_vals.rs  delimiters.rs  derive_order.rs  env.rs  examples.rs  flag_subcommands.rs  flags.rs  global_args.rs  grouped_values.rs  groups.rs  help.rs  hidden_args.rs  indices.rs  macros.rs  multiple_occurrences.rs  multiple_values.rs  opts.rs  positionals.rs  posix_compatible.rs  possible_values.rs  propagate_globals.rs  require.rs  subcommands.rs  template_help.rs  tests.rs  unique_args.rs  utf16.rs  utf8.rs  utils.rs  validators.rs  version.rs  yaml.rs
