[package]
name = "nameless-clap_up"
version = "0.0.0"
edition = "2018"
authors = [
	"Pavan Kumar Sunkara <pavan.sss1991@gmail.com>",
	"Clap Maintainers",
]
description = "Automatic code upgrader for Clap"
repository = "https://github.com/sunfishcode/clap/tree/master/clap_up"
homepage = "https://clap.rs/"
keywords = [
	"clap",
	"cli",
	"upgrader",
	"cargo-up",
]
categories = []
license = "MIT OR Apache-2.0"
readme = "README.md"

[badges]
is-it-maintained-issue-resolution = { repository = "sunfishcode/clap" }
is-it-maintained-open-issues = { repository = "sunfishcode/clap" }
maintenance = {status = "actively-developed"}

[lib]
bench = false

[dependencies]
cargo-up = { version = "=0.0.4" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.workspaces]
independent = true
